[project]
name = "langgraphchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.34",
    "marker>=2.1.3",
    "marker-pdf>=1.6.2",
    "streamlit>=1.44.1",
    "streamlit-extras>=0.6.0",
    "watchdog>=6.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
